Upgrade | Projeto atualizado para o Spring Boot versão 3.2.5